# tryst-core-portfolio

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile.bench  README.md  ROADMAP.md  bench_config.ron
.sqlx/: query-185f7e6c7863e5bbc8325da960e3ca67f07a3f7848478640e065ec57d92d7efe.json  query-21003a7179d995e9a7de2f4b83e5a13590a73d4c8ec025ab3815f6d886c6f515.json  query-39476d8427941c36020269b948d9d42b60f15042a203f99c462a036141644cca.json  query-3b21fdaec73725a96c06d1a3c316f4519974bbe021313214d221d27563ed273d.json  query-612d1cd98de94c3c3d5b28efd30351aa61542fbb9ab88dd726c4536534178f95.json  query-75d1309d795e0aa0cd5ac1f83d05ca6e84d8d501efdf093e83c326209ffa7a45.json  query-81a9d8c504c3dfcda60ebfa345436d755e1fbe8cfb48a7fe679e2cc48d44af08.json  query-de0f84f580f65e973f4706f38f03978344a0f7251d3677c47918aa2031a9e091.json  query-df2bc2bac478ede086fb69ba6772f0b0c665159840ebca261548e49559236ab3.json  query-e573368dce2437e36e90b4db1406919dda198dc26ca47e3caeb114fa9c33d04b.json  query-e8e87b14e86f30b75db4e1ad004aa824b1ad6f8bc3b2b97b5d4c0243fca69231.json
migrations/: 20250207000000_tryst.sql  20250414093115_setup.sql
scripts/: run_bench.sh  run_docker_benchmarks.sh
src/: app.rs  bench_utils.rs  error.rs  lib.rs  log.rs  manager.rs  network_endpoint.rs  persistence.rs  protocols.rs
src/persistence/: schema.rs
src/protocols/: chat.rs
src/protocols/chat/: message.rs  protocol_handler.rs  utils.rs
src/protocols/tryst/: crypto.rs  discovery.rs  invite.rs  mod.rs  persistence.rs  types.rs
