[package]
name = "gossip_core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
async-channel = "2.3.1"
async-trait = "0.1.87"
automerge = "0.7.2"
autosurgeon = { version = "0.10.0", features = ["uuid"] }
bytes = { version = "1.10.1", features = ["serde"] }
chrono = "0.4.40"
clap = { version = "4.5.31", features = ["derive"] }
dashmap = "6.1.0"
data-encoding = "2.8.0"
futures-lite = "2.6.0"
hex = "0.4.3"
iroh = { version = "0.95.0", features = ["discovery-pkarr-dht", "metrics"] }
n0-error = { version = "0.1.0", features = ["anyhow"] }
postcard = { version = "1.1.1", features = ["alloc"] }
rand = "0.9"
ron = "0.8"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sqlx = { version = "0.8.3", features = ["runtime-tokio", "macros", "sqlite", "migrate", "uuid"] }
sysinfo = "0.33.1"
thiserror = "2.0.12"
tokio = { version = "1.44.0", features = ["signal", "rt-multi-thread"] }
tokio-util = "0.7.14"
tracing = "0.1.41"
tracing-test = "0.2.5"
tracing-subscriber = { version = "0.3.19", features = ["fmt", "env-filter"] }
uniffi = { version = "0.29", features = [ "cli", "build", "tokio" ] }
uuid = { version = "1.16.0", features = ["serde"] }
base64 = "0.22.1"
n0-future = "0.3.2"
url = { version = "2.5", features = ["serde"] }
libc = "0.2.182"
hdrhistogram = "7.5.4"


[dev-dependencies]
criterion = { version = "0.5.1", features = ["async_tokio"] }
tokio = { version = "1.44.0", features = ["macros"] }
